--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,46 +16,40 @@ permissions:
 
 jobs:
   bump_version:
-    if: "!startsWith(github.event.head_commit.message, 'bump:')"
-    runs-on: ubuntu-latest
-    name: 'Bump version'
-    outputs:
-      version: ${{ steps.cz.outputs.version }}
+    if: "!startsWith(github.event.head_commit.message, 'bump:') && !startsWith(github.event.head_commit.message, 'ci:')"
+    runs-on: ubuntu-24.04
+    name: "Bump version"
     steps:
       - name: Check out
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: '${{ secrets.ACCESS_TOKEN }}'
-          ref: 'main'
+          token: "${{ secrets.ACCESS_TOKEN }}"
+          ref: "main"
 
-      - name: Config Git User
-        run: |
-          git config --local user.email "$GIT_USER_EMAIL"
-          git config --local user.name "$GIT_USER_NAME"
-          git config --local pull.ff only
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - id: cz
+        name: Create bump and changelog
+        uses: commitizen-tools/commitizen-action@0.24.0
         with:
-          python-version: 3.12
-
-      - name: Create bump and changelog
-        id: cz
-        run: |
-          python -m pip install -U commitizen
-          cz bump --yes
-          export REV=`cz version --project`
-          echo "version=\"v$REV\"" >> $GITHUB_OUTPUT
-
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.8.0
-        with:
-          github_token: ${{ secrets.ACCESS_TOKEN }}
-          repository: ${{ github.repository }}
-          branch: 'main'
-          directory: .
-          tags: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: "main"
+          git_name: ${{ secrets.GIT_NAME }}
+          git_email: ${{ secrets.GIT_EMAIL }}
+          changelog_increment_filename: body.md
 
       - name: Print Version
-        run: echo "Bumped to version ${{ steps.cz.outputs.version }}"
+        run: echo "Bumped to version v${{ env.REVISION }}"
+
+      - name: Trim body to 125000 characters
+        run: |
+          if [ $(wc -c < body.md) -gt 125000 ]; then
+            head -c 125000 body.md > body.md
+          fi
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          body_path: "body.md"
+          tag_name: v${{ env.REVISION }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          make_latest: "true"
